# protocol

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/benchmarks/: __main__.py  data_factory.py  msg_hmsg.py  ping_pong.py  stats_logger.py
src/connection/: connection.py
src/protocol/: __init__.py  choices.py  common.py  factory.py  parser.py  parser_300.py  parser_310.py  parser_3102.py  parser_re.py
tests/: test_events_repr.py  test_factory.py  test_parser.py  test_protocol_parser.py  test_server_version.py
