[project]
name = "protocol"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Guillaume Charbonnier", email = "guillaume.charbonnier@araymond.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.1.1",
    "pyright>=1.1.359",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/protocol"]

[tool.pyright]
pythonVersion = "3.10"
include = ["tests", "src", "benchmarks"]
exclude = ["**/.venv", "**/node_modules", "**/__pycache__", ".git", "**/build"]
venv = ".venv"
venvPath = "."
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "warning"
disableBytesTypePromotions = false
